--- a/src/pages/sol/shear_moment_diagrams.astro
+++ b/src/pages/sol/shear_moment_diagrams.astro
@@ -57,7 +57,9 @@ The general procedures for creating shear / bending moment diagrams are:</p>
     <Item>Apply equations of equilibrium to solve for \(V\) and \(M\) as functions of x</Item>
 </Enumerate>
 
-<Image src='/Statics/IntForceFigures/IntLoadRecap.jpg' width='7'>Examples of shear and moment diagrams</Image>
+<Image src='/Statics/IntForceFigures/IntLoadRecap.jpg' width='7'></Image>
+
+<Image src="/Solid_Mechanics/Stress Transformation-Figures/CantileverBeam.png" width="3.5"> </Image>
 
 </SubSection>
 
