--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -358,7 +358,7 @@ Mohr's circle is a graphical representation of stress transformations. The equat
 
 <DisplayEquation equation="\\begin{align} \\rm\\ Point \\ X&: (\\sigma_x, \\tau_{xy}) \\\\ \\rm\\ Point \\ Y&: (\\sigma_y, -\\tau_{xy}) \\end{align}" title="Two points of the circle." background="True"/>
 
-The principal stresses are where the circle crosses the x-axis, and the maximum shear stress, is the highest y-coordinate of the circle. 
+The principal stresses are where the circle crosses the x-axis, and the maximum shear stress is the highest y-coordinate of the circle. 
 </SubSubSection>
 
 <SubSubSection title="3-D Mohr's Circle" id="3d">
@@ -370,5 +370,5 @@ The principal stresses are where the circle crosses the x-axis, and the maximum 
 
 <DisplayEquation equation="(\\sigma_{plane}, \\tau_{plane})" title="Points of the circle are plotted using each face." background="True"/>
 
-The principal stresses are where the circle crosses the x-axis, and the maximum shear stress, is the highest y-coordinate of the circle. 
+The principal stresses are where the circle crosses the x-axis, and the maximum shear stress is the highest y-coordinate of the circle. 
 </SubSubSection>
