--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -290,7 +290,7 @@ import Searchbar from "./Searchbar.astro";
             <div class="col d-flex flex-fill px-0">
                 <div class="site_identification">
                     <div class="parent_name hide-empty d-none d-sm-block" data-value="35">
-                        <a href="https://mechses.illinois.edu" target="_blank" aria-label="The Grainger College of Engineering; Link opens in new tab">
+                        <a href="https://mechse.illinois.edu" target="_blank" aria-label="The Grainger College of Engineering; Link opens in new tab">
                             <span>Mechanical Science &amp; Engineering</span>
                         </a>
                     </div>
