--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -66,8 +66,42 @@ Frame and machine analysis involves the following steps:
 </p>
 </Section>
 
+</Section>
 
+<Section title="Example: Machine" id="examplemachine">
+<p>
 
+This example is from <em>Engineering Statics</em> by Daniel Baker and William Haynes. 
+
+In this question, we want to know what the cutting force is at A and B given an applied loaf F=60N. 
+
+<Image src='/Statics/FramesMachinesFigures/Machine_Pliers.jpg' width='6'></Image>
+
+<Enumerate>
+	<Item> Through examination, we first notice that the DE and AB are two force members, so the forces on those two members are equal and opposite and pass through the points AB and DE. 
+    	</Item> 
+	<Item> The multi force members that we will examine are members GE and ACD. 
+    	</Item> 
+</Enumerate>
+
+Let's start with member GE: 
+
+<Image src='/Statics/FramesMachinesFigures/FBD_GE.jpg' width='6'></Image>
+
+Taking the sum of force in the x and y direction and the sum of moments about G, we can solve for F<sub>DE</sub>, which is -362.038 N. 
+
+We can then draw a FBD for member ACD: 
+
+Note that the force DE, which was in the FBD for member GE, is facing the opposite direction in this FBD. 
+
+<Image src='/Statics/FramesMachinesFigures/FBD_ACD.jpg' width='6'></Image>
+
+Writing the sum of moments about point C allows us to solve for the force at A, which is 268.692 N. 
+
+We can also calculate the mechanical advantage of this machine by dividing the cutting force by the applied force of 60 N. In this case, the maching gives a mechancial advantage of 4.478. 
+
+</p>
+</Section>
 
 </Layout>
 
