--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -34,7 +34,7 @@ Multi-force members in both frames and machines have the potential to have not o
 
 <Section title="Frames" id="frames">
 
-<p>Frames are systems with at least one multi-force member that are generally designed to be stationary. SOme examples of frames could be a children's playground or even a table. 
+<p>Frames are systems with at least one multi-force member that are generally designed to be stationary. Some examples of frames could be a children's playground or even a table. 
 
 </p>
 </Section>
