--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -98,7 +98,7 @@ Note that the force DE, which was in the FBD for member GE, is facing the opposi
 
 Writing the sum of moments about point C allows us to solve for the force at A, which is 268.692 N. 
 
-We can also calculate the mechanical advantage of this machine by dividing the cutting force by the applied force of 60 N. In this case, the maching gives a mechancial advantage of 4.478. 
+We can also calculate the mechanical advantage of this machine by dividing the cutting force by the applied force of 60 N. In this case, the maching gives a mechanical advantage of 4.478. 
 
 </p>
 </Section>
