--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -73,7 +73,7 @@ Frame and machine analysis involves the following steps:
 
 This example is from <em>Engineering Statics</em> by Daniel Baker and William Haynes. 
 
-In this question, we want to know what the cutting force is at A and B given an applied loaf F=60N. 
+In this question, we want to know what the cutting force is at A and B given an applied load F=60N. 
 
 <Image src='/Statics/FramesMachinesFigures/Machine_Pliers.jpg' width='4'></Image>
 
