--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -64,7 +64,7 @@ Frame and machine analysis involves the following steps:
 </Enumerate>
 
 </p>
-</Section>
+</SubSection>
 
 <SubSection title="Example: Machine" id="examplemachine">
 <p>
