--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -17,6 +17,7 @@ import PrairieDrawCanvas from "../../components/PrairieDrawCanvas.astro"
 import Row from "../../components/Row.astro"
 import Col from "../../components/Col.astro"
 import Center from "../../components/Center.astro"
+import CustomCanvas from "../../components/CustomCanvas.astro"
 ---
 <Layout title="Stress Transformation">
 
