--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -63,7 +63,7 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 <SubSection title="General Rules" id="general_rules">
 
 <Enumerate>
-	<Item>When there is an external concentrated force or moment, there will be a "jump" in the shear force or bending moment diagram
+	<Item>When there is an external concentrated force or moment, there will be a "jump" in the shear force or bending moment diagram. Upward forces lead to an upward jump in \(V\), and clockwise external moments result in a jump "up" in the graph of \(M\).
     </Item>
 	<Item>\(w(x)\), \(V\), and \(M\) are related via the following relationship: </Item>
 </Enumerate>
