--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -9,7 +9,7 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import Enumerate from "../../components/Enumerate.astro"
 import Item from "../../components/Item.astro"
 ---
-<Layout title="Internal Forces">
+<Layout title="Shear Force and Bending Moment Diagrams">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
