--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -338,7 +338,7 @@ import Searchbar from "./Searchbar.astro";
                             <li><a href="/sta/reaction_forces">Reaction Forces</a></li>
                             <li><a href="/sta/trusses">Trusses</a></li>
                             <li><a href="/sta/frames_and_machines">Frames and Machines</a></li>
-                            <li><a href="/sta/internal_forces">Internal Forces</a></li>
+                            <li><a href="/sta/internal_forces">Shear Force and Bending Moment Diagrams</a></li>
                             <li><a href="/sta/friction">Friction</a></li>
                             <li><a href="/sta/centers_of_mass">Center of Mass</a></li>
                             <li><a href="/sta/hydrostatic_fluid_pressure">Hydrostatic Fluid Pressure</a></li>
