--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -9,7 +9,7 @@ import InlineEquation from "../../components/InlineEquation.astro"
 import Enumerate from "../../components/Enumerate.astro"
 import Item from "../../components/Item.astro"
 ---
-<Layout title="Shear Force and Bending Moment Diagrams">
+<Layout title="Shear Force & Bending Moment Diagrams">
 
     <div slot="navtree">
         <ul class='list-group list-group-flush py-0'> 
@@ -18,7 +18,7 @@ import Item from "../../components/Item.astro"
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_rules'>General Rules</a></li>
       </ul>
       </div>
-<Section title="Internal Forces" id="internal_forces">
+<Section title="Shear Force & Bending Moment Diagrams" id="internal_forces">
 <p>
 Internal forces of a member can be determined by creating an imaginary cut in a member, and then solving for the internal shear force, normal force, and bending moment (which, after the cut, become "external" forces that can be solved for). 
 </p>
