--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -7,6 +7,8 @@ import BlueText from "../../components/BlueText.astro"
 import RedText from "../../components/RedText.astro" 
 import InlineEquation from "../../components/InlineEquation.astro" 
 import Enumerate from "../../components/Enumerate.astro"
+import CalloutContainer from "../../components/CalloutContainer.astro"
+import CalloutCard from "../../components/CalloutCard.astro"
 import Item from "../../components/Item.astro"
 ---
 <Layout title="Shear Force & Bending Moment Diagrams">
