--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -63,10 +63,10 @@ The general procedures for creating shear / bending moment diagrams are:</p>
     <CalloutContainer slot="cards">
         <CalloutCard title="A note on concentrated moments">
             <p>
-                In our discussion on <a href="https://www.mechref.org/sta/force_systems/#equivalent_systems">Equivalent Systems</a>, we noted that you can move a couple moment anywhere on a rigid body and still have the same <b>external</b> effect on the rigid body. 
+                In our discussion on <a href="https://www.mechref.org/sta/force_systems/#equivalent_systems">Equivalent Systems</a>, we noted that you can move a couple moment anywhere on a rigid body with no <b>external</b> effect. 
               </p>
               <p>
-                <i>However,</i> in this section we are concerned about the <b>internal</b> forces in a rigid body. When you move a concentrated moment, it changes the internal loading of the rigid body, so you have to leave the moment where it is to analyze the internal forces on a system.  
+                <i>However,</i> in this section we are concerned about the <b>internal</b> forces in a rigid body. When you move a concentrated moment, it changes the internal loading of the rigid body, so you have to leave the moment where it is to analyze the internal forces of a system.  
               </p>
         </CalloutCard>
     </CalloutContainer>
